--- a/.gitignore
+++ b/.gitignore
@@ -205,4 +205,7 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 
+# DevContainer sensitive files
 .devcontainer/.env
+.devcontainer/secure.init.sh
+.devcontainer/.user.env
