Fix README: Add Docker image build requirements and correct PyCharm setup
- Add Prerequisites section highlighting need to build Docker images first
- Add dedicated 'Building Docker Images' section with examples
- Fix PyCharm instructions: DevContainer plugin instead of Python Interpreter
- Add alternative PyCharm setup for Docker Compose interpreter
- Include build script usage examples and image verification commands
- Make image building requirement more prominent

--- a/.devcontainer.example/devcontainer.json
+++ b/.devcontainer.example/devcontainer.json
@@ -17,7 +17,7 @@
   },
   "remoteEnv": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
-    "CLAUDE_CONFIG_DIR": "/home/node/.claude",
+    "CLAUDE_CONFIG_DIR": "/home/claude/.claude",
     "POWERLEVEL9K_DISABLE_GITSTATUS": "true"
   }
 }
