feat(cli): polish Python migration
- Docker: fix     PID TTY          TIME CMD
 948830 pts/1    00:00:00 zsh
 948834 pts/1    00:00:00 zsh
 948894 pts/1    00:00:00 zsh
 948895 pts/1    00:00:00 zsh
 948897 pts/1    00:00:00 gitstatusd-linu
 950763 pts/1    00:00:00 run-codex.sh
 950764 pts/1    00:00:00 node
 950775 pts/1    00:00:09 codex-x86_64-un
 954480 pts/1    00:00:00 black
1401736 pts/1    00:00:00 bash
1401738 pts/1    00:00:00 ps JSON format, add variant→image mapping (dotnet/golang),
  unify container naming in , add interactive shell fallback (zsh→bash→sh)
- Notify: convert to group and expose
- Doctor: accept  flag (also works via root -v)
- Templates: remove compose  key; correct image repo selection
- Init: replace os.system with safe subprocess calls for perms
- Utils: robust Docker detection (treat ServerErrors/no version as not running),
  portable home dir resolution, better typing for run_command/format_size
- README: document notify stop and doctor verbose
- Clean: remove developer-specific mount from override.user.yaml

Includes CODE_REVIEW.md and TEST_REPORT.md with full analysis and test logs.

--- a/.devcontainer/override.user.yaml
+++ b/.devcontainer/override.user.yaml
@@ -7,3 +7,4 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    # user-level overrides can mount additional volumes locally if desired
