chore: remove user-specific Claude settings from git
- Remove .claude/settings.local.json from git tracking
- Add .claude/settings.local.json to .gitignore
- Keep file locally but don't track in repository

User-specific settings should not be in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -206,11 +206,10 @@ __marimo__/
 .streamlit/secrets.toml
 
 # DevContainer sensitive files
-.devcontainer/.env
-.devcontainer/secure.init.sh
-.devcontainer/.user.env
-.devcontainer/override.user.yaml
-.devcontainer/ai-sbx.yaml
+.devcontainer/settings.local.json
+
+# Claude settings (user-specific)
+.claude/settings.local.json
 
 # Task worktrees
 tasks/
