refactor: consolidate devcontainer setup and directory structure
- Move all global files to ~/.ai-sbx directory
- Simplify devcontainer setup with local compose files
- Add fallback to docker-compose when devcontainer CLI hangs
- Update all paths to use dynamic HOME variable
- Stage .zshrc modifications

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
   "name": "${localWorkspaceFolderBasename} - Claude Code Sandbox",
-  "dockerComposeFile": ["local.project.yaml",
-    "/usr/local/share/ai-agents-sandbox/docker-compose.base.yaml",
-    "override.user.yaml",
-  ],
+  "dockerComposeFile": ["docker-compose.base.yaml", "docker-compose.override.yaml"],
   "service": "devcontainer",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
